# rust_wasm_sample

./: Cargo.toml  Readme.md  index.html
src/: lib.rs  main.rs
