[package]
name = "rust_wasm_sample"
version = "0.1.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version="0.3"
features=[
    "Document",
    "Element",
    "HtmlElement",
    "Window",
]
